--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://drive.google.com/file/d/1oHSIuSCoCaOLA33-ENX0n_U5uiwJfjMQ/view?usp=sharing" target="_blank"
+                  <a href="https://github.com/SALT-NLP/LLaVAR" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -571,6 +571,22 @@
             </div> 
   
       </div>
+    </div>
+  </section>
+
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>
+        @misc{zhang2023llavar,
+          title={LLaVAR: Enhanced Visual Instruction Tuning for Text-Rich Image Understanding}, 
+          author={Yanzhe Zhang and Ruiyi Zhang and Jiuxiang Gu and Yufan Zhou and Nedim Lipka and Diyi Yang and Tong Sun},
+          year={2023},
+          eprint={2306.17107},
+          archivePrefix={arXiv},
+          primaryClass={cs.CV}
+    }
+  </code></pre>
     </div>
   </section>
   
