--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
            </p>
           <br>
            <p>
-            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model. Demo/Github/Huggingface is on the way!</strong> The released model checkpoint should be merged with LLaMA 13B.
+            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model. Demo/Huggingface is on the way!</strong> The released model checkpoint should be merged with LLaMA 13B.
          </p>
   
           </div>
