--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a  target="_blank"
+                  <a  href="https://eba470c07c805702b8.gradio.live/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
