--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
            </p>
           <br>
            <p>
-            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model. Demo/Huggingface is on the way!</strong>
+            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model/Demo. Huggingface is on the way!</strong>
          </p>
   
           </div>
