--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="column is-full-width">
         <div class="content has-text-justified">
           <p>
-            Based on the LAION dataset, we collect 422K pretraining data based on OCR results. We also collect 16K high-quality instruction-following data by interacting with langauge-only GPT-4. We release a larger and more diverse finetuning dataset below (20K), which contains the 16K we used for the paper. Note that the instruction files below contain the original LLaVA instructions. You can directly use them after merging the images into your LLaVA image folders. If you want to use them independantly, you can remove the items that contained in the original chat.json and llava_instruct_150k.json from LLaVA.
+            Based on the LAION dataset, we collect 422K pretraining data based on OCR results. For finetuning data, we collect 16K high-quality instruction-following data by interacting with langauge-only GPT-4. Note that we also release a larger and more diverse finetuning dataset below (20K), which contains the 16K we used for the paper. The instruction files below contain the original LLaVA instructions. You can directly use them after merging the images into your LLaVA image folders. If you want to use them independantly, you can remove the items that contained in the original chat.json and llava_instruct_150k.json from LLaVA.
   
   <!-- CSS Code: Place this code in the document's head (between the 'head' tags) -->
   <style>
