--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="column is-full-width">
           <div class="content has-text-justified">
             <p>
-              We collect 50 instruction-following data on 50 text-rich images from LAION.
+              We collect 50 instruction-following data on 50 text-rich images from LAION. You can use it for <a href="https://github.com/haotian-liu/LLaVA/tree/main#gpt-assisted-evaluation">GPT-4-based instruction-following evaluation</a>.
   <!-- CSS Code: Place this code in the document's head (between the 'head' tags) -->
   <style>
     table.GeneratedTable {
