--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://drive.google.com/drive/folders/19uEwM1VrzX_KqCzzSJAh8RqOHbf4WS5Z?usp=sharing" target="_blank"
+                  <a href="https://huggingface.co/SALT-NLP/LLaVAR_delta/tree/main" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-share-square"></i>
@@ -225,6 +225,9 @@
             <p>
               Instruction tuning unlocks the superior capability of Large Language Models (LLM) to interact with humans. Furthermore, recent instruction-following datasets include images as visual inputs, collecting responses for image-based instructions. However, visual instruction-tuned models cannot comprehend textual details within images well. This work enhances the current visual instruction tuning pipeline with text-rich images (e.g., movie posters, book covers, etc.). Specifically, we first use publicly available OCR tools to collect results on 422K text-rich images from the LAION dataset. Moreover, we prompt text-only GPT-4 with recognized texts and image captions to generate 16K conversations, each containing question-answer pairs for text-rich images. By combining our collected data with previous multi-modal instruction-following data, our model, LLaVAR, substantially improves the LLaVA model's capability on text-based VQA datasets (up to 20% accuracy improvement) while achieving an accuracy of 91.42% on ScienceQA. The GPT-4-based instruction-following evaluation also demonstrates the improvement of our model on both natural images and text-rich images. Through qualitative analysis, LLaVAR shows promising interaction (e.g., reasoning, writing, and elaboration) skills with humans based on the latest real-world online content that combines text and images.</p>
           <br>
+          <p>
+            <strong>[UPDATE 07/05] Model checkpoint (delta) available on <a href="https://huggingface.co/SALT-NLP/LLaVAR_delta/tree/main">Huggingface</a>.</strong>
+         </p>
            <p>
             <strong>[UPDATE 06/29] Initial Release of Data/Code/Model/Demo. Huggingface is on the way!</strong>
          </p>
