update demo link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a  href="https://ab520c05f28c8eb004.gradio.live/" target="_blank"
+                  <a  href="https://91a272cd67d6145ce1.gradio.live" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
