--- a/index.html
+++ b/index.html
@@ -168,15 +168,6 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a  href="https://45b6a1616d117a56a4.gradio.live" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="far fa-images"></i>
-                    </span>
-                    <span>Demo</span>
-                  </a>
-                </span>
-                <span class="link-block">
                   <a  href="#data" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -241,7 +232,7 @@
             <strong>[UPDATE 07/05] Model checkpoint (delta) available on <a href="https://huggingface.co/SALT-NLP/LLaVAR_delta/tree/main">Huggingface</a>.</strong>
          </p>
            <p>
-            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model/Demo. Huggingface is on the way!</strong>
+            <strong>[UPDATE 06/29] Initial Release of Data/Code/Model. Huggingface is on the way!</strong>
          </p>
   
           </div>
