--- a/mmr/index.html
+++ b/mmr/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="TRINS: Towards Multimodal Language Models that Can Read">
+  <meta name="description" content="Evaluating Reading Ability of Large Multimodal Models">
   <meta name="keywords" content="multimodal chatbot">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>LLaVAR</title>
@@ -112,8 +112,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">TRINS: Towards Multimodal Language Models </h1>
-            <h2 class="title is-2 publication-title"> that Can Read</h2>
+            <h1 class="title is-2 publication-title">Evaluating Reading Ability of Large Multimodal Models </h1>
             <div class="is-size-5">
               <span class="author-block">
                 <a href="https://puar-playground.github.io/about-me/" style="color:#F2A900;font-weight:normal;">Jian Chen</a>,
@@ -128,10 +127,10 @@
                 <a href="https://gujiuxiang.com/" style="color:#008AD7;font-weight:normal;">Jiuxiang Gu</a>,
               </span>
               <span class="author-block">
-                <a href="https://research.adobe.com/person/tong-sun/" style="color:#008AD7;font-weight:normal;">Ryan Rossi</a>
+                <a href="https://research.adobe.com/person/tong-sun/" style="color:#008AD7;font-weight:normal;">Ryan Rossi</a>,
               </span>
               <span class="author-block">
-                <a href="https://cse.buffalo.edu/~changyou/" style="color:#F2A900;font-weight:normal;">Changyou Chen</a>,
+                <a href="https://cse.buffalo.edu/~changyou/" style="color:#F2A900;font-weight:normal;">Changyou Chen</a>
               </span>
             </div>
 
@@ -169,16 +168,16 @@
                     <span class="icon">
                       <i class="fas fa-database"></i>
                     </span>
-                    <span>Dataset</span>
+                    <span>Data</span>
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://huggingface.co/SALT-NLP/LLaVAR_delta/tree/main" target="_blank"
+                  <a  href="#data" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-share-square"></i>
+                      <i class="fas fa-database"></i>
                     </span>
-                    <span>Model</span>
+                    <span>Leader Board</span>
                   </a>
                 </span>
               </div>
@@ -210,10 +209,10 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Large language models (LMMs) have demonstrated impressive capabilities in understanding various types of image, including text-rich images\footnote{In this work, “text-rich images” refers to images with rich textual information, including posters, and book covers, etc.}. Most existing text-rich image benchmarks are simple extraction-based question answering, and many LMMs now easily achieve high scores. This means that current benchmarks fail to accurately reflect performance of different models, and a natural idea is to build a new benchmark to evaluate their complex reasoning and spatial understanding abilities. In this work, we propose the Multi-Modal Reading (MMR) benchmark in 11 diverse tasks to evaluate LMMs for text-rich image understanding. MMR is the first text-rich image benchmark built on human annotations with the help of language models. By evaluating several state-of-the-art LMMs, including GPT-4o, it reveals the limited capabilities of existing LMMs underscoring the value of our benchmark. 
+              Large language models (LMMs) have demonstrated impressive capabilities in understanding various types of image, including text-rich images. Most existing text-rich image benchmarks are simple extraction-based question answering, and many LMMs now easily achieve high scores. This means that current benchmarks fail to accurately reflect performance of different models, and a natural idea is to build a new benchmark to evaluate their complex reasoning and spatial understanding abilities. In this work, we propose the Multi-Modal Reading (MMR) benchmark in 11 diverse tasks to evaluate LMMs for text-rich image understanding. MMR is the first text-rich image benchmark built on human annotations with the help of language models. By evaluating several state-of-the-art LMMs, including GPT-4o, it reveals the limited capabilities of existing LMMs underscoring the value of our benchmark. 
             </p>  
           <p>
-            <strong>[UPDATE 06/06] Initial Paper Release of TRINS.</strong>
+            <strong>[UPDATE 07/19] Initial Paper Release of MMR.</strong>
          </p>
   
           </div>
