--- a/mmr/index.html
+++ b/mmr/index.html
@@ -193,10 +193,11 @@
       <div class="hero-body">
         <h4 class="subtitle has-text-centered">
           <figure style="text-align: center;">
-            <img id="teaser" width="100%" src="images/DataOverview.png"> 
+            <img id="teaser" width="100%" src="images/demo.png"> 
           </figure>
-          <strong>TRINS</strong>: a Text-Rich image <strong>INS</strong>truction dataset.
+          <strong>MMR</strong>: Multi-Modal <strong>Reading</strong> Benchmark.
         </h4>
+        
       </div>
     </div>
   </section>
@@ -210,7 +211,8 @@
           <div class="content has-text-justified">
             <p>
               Large language models (LMMs) have demonstrated impressive capabilities in understanding various types of image, including text-rich images. Most existing text-rich image benchmarks are simple extraction-based question answering, and many LMMs now easily achieve high scores. This means that current benchmarks fail to accurately reflect performance of different models, and a natural idea is to build a new benchmark to evaluate their complex reasoning and spatial understanding abilities. In this work, we propose the Multi-Modal Reading (MMR) benchmark in 11 diverse tasks to evaluate LMMs for text-rich image understanding. MMR is the first text-rich image benchmark built on human annotations with the help of language models. By evaluating several state-of-the-art LMMs, including GPT-4o, it reveals the limited capabilities of existing LMMs underscoring the value of our benchmark. 
-            </p>  
+            </p> 
+             
           <p>
             <strong>[UPDATE 07/19] Initial Paper Release of MMR.</strong>
          </p>
