--- a/mmr/index.html
+++ b/mmr/index.html
@@ -189,20 +189,22 @@
   </section>
 
   <section class="hero teaser">
-    <div class="container is-max-desktop">
-      <div class="hero-body">
-        <h4 class="subtitle has-text-centered">
-          <figure style="text-align: center;">
-            <img id="teaser" width="100%" src="images/demo.png"> 
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-three-fifths" style="display: flex; align-items: flex-start; justify-content: space-around;">
+          <figure style="margin: 0 50px; text-align: center;">
+              <img id="teaser" width="85%" src="images/pie.png">
+              <figcaption>
+                  Question distributions of MMR
+              </figcaption>
           </figure>
-          <strong>MMR</strong>: Multi-Modal <strong>Reading</strong> Benchmark.
-        </h4>
-        
+          <figure style="margin: 0 50px; text-align: center;">
+              <img id="teaser" width="100%" src="images/radar.png">
+              <figcaption>
+                  Performance of different methods
+              </figcaption>
+          </figure>
       </div>
-    </div>
-  </section>
-
-  <section class="section"  style="background-color:#efeff081">
+  </div> 
     <div class="container is-max-desktop">
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
@@ -221,6 +223,19 @@
         </div>
       </div>
         
+    </div>
+  </section>
+
+  <section class="section"  style="background-color:#efeff081">
+    <div class="container is-max-desktop">
+      <div class="hero-body">
+        <h4 class="subtitle has-text-centered">
+          <figure style="text-align: center;">
+            <img id="teaser" width="100%" src="images/demo.png"> 
+          </figure>
+          <strong>MMR</strong>: Multi-Modal <strong>Reading</strong> Benchmark.
+        </h4>
+      </div>
     </div>
   </section>
 
