--- a/mmr/index.html
+++ b/mmr/index.html
@@ -511,10 +511,10 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-        @inproceedings{trins2023zhang,
-          title={TRINS: Towards Multimodal Language Models that Can Read},
-          author={Zhang, Ruiyi and Zhang, Yanzhe and Chen, Jian and Zhou, Yufan and Gu, Jiuxiang and Chen, Changyou and Sun, Tong},
-          booktitle={proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+        @inproceedings{mmr2024chen,
+          title={Evaluating Reading Ability of Large Multimodal Models},
+          author={Chen, Jian and Zhang, Ruiyi and Zhou, Yufan and Gu, Jiuxiang and Rossi, Ryan and Chen, Changyou},
+          booktitle={Arxiv},
           year={2024}
         }
   </code></pre>
