--- a/mmr/index.html
+++ b/mmr/index.html
@@ -115,7 +115,7 @@
             <h1 class="title is-2 publication-title">Evaluating Reading Ability of Large Multimodal Models </h1>
             <div class="is-size-5">
               <span class="author-block">
-                <a href="https://puar-playground.github.io/about-me/" style="color:#F2A900;font-weight:normal;">Jian Chen</a>,
+                <a href="https://puar-playground.github.io/CV/" style="color:#F2A900;font-weight:normal;">Jian Chen</a>,
               </span>
               <span class="author-block">
                 <a href="https://zhangry868.github.io/" style="color:#008AD7;font-weight:normal;">Ruiyi Zhang</a>,
@@ -145,7 +145,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2306.17107" target="_blank"
+                  <a href="https://arxiv.org/abs/2408.14594v1" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -154,7 +154,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/SALT-NLP/LLaVAR" target="_blank"
+                  <a href="https://github.com/llavar/MMR_Bench" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -163,7 +163,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a  href="#data" target="_blank"
+                  <a  href="https://huggingface.co/datasets/puar-playground/MMR" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-database"></i>
@@ -317,21 +317,38 @@
         <td class="tg-vudv">Total</td>
       </tr>
       <tr>
+        <td class="tg-jr47">Claude 3.5 Sonnet</td>
+        <td class="tg-jr47">-</td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">31</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">43</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">38</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">45</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">36</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">47</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">11</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">463</span></td>
+      </tr>
+      <tr>
         <td class="tg-jr47">GPT-4o</td>
         <td class="tg-jr47">-</td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">34</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">43</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">41</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">40</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">41</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">34</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">40</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">19</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">458</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">21</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">457</span></td>
       </tr>
       <tr>
         <td class="tg-jr47">GPT-4V</td>
@@ -354,17 +371,17 @@
         <td class="tg-jr47">LLaVA-NEXT</td>
         <td class="tg-jr47">34B</td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">28</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">27</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">41</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">41</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">28</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">31</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">44</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">44</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">31</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">4</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">40</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">5</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">412</span></td>
       </tr>
       <tr>
@@ -385,21 +402,21 @@
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">397</span></td>
       </tr>
       <tr>
-        <td class="tg-jr47">LLaVA-NEXT</td>
-        <td class="tg-jr47">13B</td>
+        <td class="tg-jr47">InternVL2</td>
+        <td class="tg-jr47">8B</td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">30</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">46</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">44</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">28</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">34</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">30</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">36</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">19</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">32</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">32</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">40</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">3</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">369</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">42</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">27</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">45</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">15</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">5</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">368</span></td>
       </tr>
       <tr>
         <td class="tg-jr47">Qwen-vl-max</td>
@@ -417,6 +434,23 @@
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">32</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">5</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">366</span></td>
+      </tr>
+      <tr>
+        <td class="tg-jr47">LLaVA-NEXT</td>
+        <td class="tg-jr47">13B</td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">36</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">27</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">38</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">38</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">23</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">31</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">37</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">2</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">335</span></td>
       </tr>
       <tr>
         <td class="tg-jr47">Qwen-vl-plus</td>
@@ -453,7 +487,7 @@
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">256</span></td>
       </tr>
       <tr>
-        <td class="tg-jr47">LLaVA-1.5</td>
+        <td class="tg-jr47">LLaVA 1.5</td>
         <td class="tg-jr47">13B</td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">30</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">10</span></td>
@@ -464,10 +498,27 @@
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">16</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">24</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">26</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">39</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">4</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">243</span></td>
+      </tr>
+      <tr>
+        <td class="tg-jr47">InternVL2</td>
+        <td class="tg-jr47">1B</td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">35</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">29</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">32</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">24</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">28</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">25</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">17</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">27</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">19</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">1</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">237</span></td>
       </tr>
       <tr>
         <td class="tg-jr47">Monkey-Chat</td>
@@ -489,15 +540,15 @@
       <tr>
         <td class="tg-jr47">Idefics</td>
         <td class="tg-jr47">80B</td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">36</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">23</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">36</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">29</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">31</span></td>
-        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">27</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">20</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">1</span></td>
         <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">21</span></td>
-        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">33</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">20</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">21</span></td>
+        <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">17</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">20</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">19</span></td>
+        <td class="tg-jvz3"><span style="font-weight:normal;font-style:normal;color:#000">20</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
         <td class="tg-c3ow"><span style="font-weight:normal;font-style:normal;color:#000">0</span></td>
@@ -507,13 +558,16 @@
 </div>
 </section>
 
+
+
+
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
         @inproceedings{mmr2024chen,
-          title={Evaluating Reading Ability of Large Multimodal Models},
-          author={Chen, Jian and Zhang, Ruiyi and Zhou, Yufan and Gu, Jiuxiang and Rossi, Ryan and Chen, Changyou},
+          title={MMR: Evaluating Reading Ability of Large Multimodal Models},
+          author={Chen, Jian and Zhang, Ruiyi and Zhou, Yufan and Rossi, Ryan and Gu, Jiuxiang and Chen, Changyou},
           booktitle={Arxiv},
           year={2024}
         }
