--- a/mmr/index.html
+++ b/mmr/index.html
@@ -172,7 +172,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a  href="#data" target="_blank"
+                  <a  href="https://paperswithcode.com/sota/mmr-total-on-mrr-benchmark" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-database"></i>
