--- a/mmr/index.html
+++ b/mmr/index.html
@@ -565,10 +565,10 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-        @inproceedings{mmr2024chen,
+        @article{chen2024mmr,
           title={MMR: Evaluating Reading Ability of Large Multimodal Models},
           author={Chen, Jian and Zhang, Ruiyi and Zhou, Yufan and Rossi, Ryan and Gu, Jiuxiang and Chen, Changyou},
-          booktitle={Arxiv},
+          journal={arXiv preprint arXiv:2408.14594},
           year={2024}
         }
   </code></pre>
